@startuml diagrama_classes

title Diagrama de Classes — Flutter CRUD de Produtos\nMVVM + Clean Architecture

skinparam classAttributeIconSize 0
skinparam class {
  BackgroundColor White
  BorderColor Black
  ArrowColor Black
}
skinparam packageStyle rectangle

' ─────────────────────────────────────────────
' PACKAGE: core
' ─────────────────────────────────────────────
package "core" {

  package "core.errors" {
    class Failure {
      +message : String
      --
      +Failure(message: String)
    }
    note right of Failure : implements Exception
  }

  package "core.network" {
    class HttpClient {
      -_client : http.Client
      --
      +HttpClient(client: http.Client)
      +get(url: String) : Future<http.Response>
      +post(url: String, headers: Map?, body: Object?) : Future<http.Response>
      +put(url: String, headers: Map?, body: Object?) : Future<http.Response>
      +delete(url: String) : Future<http.Response>
    }
  }

}

' ─────────────────────────────────────────────
' PACKAGE: domain
' ─────────────────────────────────────────────
package "domain" {

  package "domain.entities" {
    class Product {
      +id : int
      +title : String
      +description : String
      +price : double
      +image : String
      +category : String
      +favorite : bool
      --
      +Product(id, title, description, price, image, category, favorite)
    }
  }

  package "domain.repositories" {
    abstract class ProductRepository {
      {abstract}
      +getProducts() : Future<List<Product>>
      +createProduct(product: Product) : Future<Product>
      +updateProduct(product: Product) : Future<Product>
      +deleteProduct(id: int) : Future<void>
    }
  }

}

' ─────────────────────────────────────────────
' PACKAGE: data
' ─────────────────────────────────────────────
package "data" {

  package "data.models" {
    class ProductModel {
      +id : int
      +title : String
      +description : String
      +price : double
      +image : String
      +category : String
      --
      +ProductModel(id, title, description, price, image, category)
      +{static} fromJson(json: Map) : ProductModel
      +toJson() : Map<String, dynamic>
    }
  }

  package "data.datasources" {
    class ProductRemoteDatasource {
      +client : HttpClient
      -{static} baseUrl : String
      --
      +ProductRemoteDatasource(client: HttpClient)
      +getProducts() : Future<List<ProductModel>>
      +createProduct(product: ProductModel) : Future<ProductModel>
      +updateProduct(product: ProductModel) : Future<ProductModel>
      +deleteProduct(id: int) : Future<void>
    }

    class ProductCacheDatasource {
      -_cache : List<ProductModel>?
      --
      +save(products: List<ProductModel>) : void
      +get() : List<ProductModel>?
      +clear() : void
      +hasData() : bool
    }
  }

  package "data.repositories" {
    class ProductRepositoryImpl {
      +remoteDatasource : ProductRemoteDatasource
      +cacheDatasource : ProductCacheDatasource
      --
      +ProductRepositoryImpl(remoteDatasource, cacheDatasource)
      +getProducts() : Future<List<Product>>
      +createProduct(product: Product) : Future<Product>
      +updateProduct(product: Product) : Future<Product>
      +deleteProduct(id: int) : Future<void>
      -_mapToEntity(m: ProductModel) : Product
    }
  }

}

' ─────────────────────────────────────────────
' PACKAGE: presentation
' ─────────────────────────────────────────────
package "presentation" {

  package "presentation.viewmodels" {
    class ProductState {
      +isLoading : bool
      +isSaving : bool
      +products : List<Product>
      +error : String?
      +saveError : String?
      +showOnlyFavorites : bool
      +selectedProduct : Product?
      --
      +ProductState(...)
      +favoriteCount : int
      +displayedProducts : List<Product>
      +copyWith(...) : ProductState
    }

    class ProductViewModel {
      +repository : ProductRepository
      +state : ValueNotifier<ProductState>
      --
      +ProductViewModel(repository: ProductRepository)
      +loadProducts() : Future<void>
      +createProduct(title, description, price, image, category) : Future<bool>
      +updateProduct(product: Product) : Future<bool>
      +deleteProduct(id: int) : Future<bool>
      +selectProduct(product: Product?) : void
      +toggleFavorite(productId: int) : void
      +toggleFavoriteFilter() : void
    }
  }

  package "presentation.pages" {
    class ProductListPage <<Widget>> {
      +viewModel : ProductViewModel
      --
      +ProductListPage(viewModel: ProductViewModel)
      +build(context: BuildContext) : Widget
      -_navigateToDetail(context, product: Product) : void
      -_navigateToForm(context, product: Product?) : void
      -_confirmDelete(context, product: Product) : Future<void>
    }

    class ProductDetailPage <<Widget>> {
      +product : Product
      --
      +ProductDetailPage(product: Product)
      +build(context: BuildContext) : Widget
    }

    class ProductFormPage <<Widget>> {
      +viewModel : ProductViewModel
      +product : Product?
      --
      +ProductFormPage(viewModel, product?)
      +createState() : State<ProductFormPage>
    }

    class _ProductFormPageState {
      -_formKey : GlobalKey<FormState>
      -_titleController : TextEditingController
      -_descriptionController : TextEditingController
      -_priceController : TextEditingController
      -_imageController : TextEditingController
      -_categoryController : TextEditingController
      --
      +isEditing : bool
      +initState() : void
      +dispose() : void
      -_saveProduct() : Future<void>
      +build(context: BuildContext) : Widget
    }
  }

  package "presentation.widgets" {
    class ProductCard <<Widget>> {
      +product : Product
      +onTap : VoidCallback
      +onEdit : VoidCallback
      +onDelete : VoidCallback
      +onToggleFavorite : VoidCallback
      --
      +ProductCard(product, onTap, onEdit, onDelete, onToggleFavorite)
      +build(context: BuildContext) : Widget
    }
  }

}

' ─────────────────────────────────────────────
' PACKAGE: main
' ─────────────────────────────────────────────
package "main" {
  class MyApp <<Widget>> {
    +viewModel : ProductViewModel
    --
    +MyApp(viewModel: ProductViewModel)
    +build(context: BuildContext) : Widget
  }
}

' ─────────────────────────────────────────────
' RELATIONSHIPS
' ─────────────────────────────────────────────

' core.errors
Failure ..|> Exception

' core.network
HttpClient o-- "1" http.Client : uses

' domain
ProductRepository ..> Product : uses
ProductRepositoryImpl ..|> ProductRepository

' data.models
ProductModel ..> Product : maps to

' data.datasources
ProductRemoteDatasource --> HttpClient : uses
ProductCacheDatasource *-- "0..*" ProductModel : caches

' data.repositories
ProductRepositoryImpl --> ProductRemoteDatasource : uses
ProductRepositoryImpl --> ProductCacheDatasource : uses
ProductRepositoryImpl ..> Failure : throws

' presentation.viewmodels
ProductViewModel --> ProductRepository : uses
ProductViewModel *-- "1" ProductState : has state
ProductState o-- "0..*" Product : contains
ProductState o-- "0..1" Product : selectedProduct

' presentation.pages
ProductListPage --> ProductViewModel : uses
ProductListPage ..> ProductDetailPage : navigates to
ProductListPage ..> ProductFormPage : navigates to
ProductListPage --> ProductCard : renders
ProductDetailPage --> Product : displays
ProductFormPage --> ProductViewModel : uses
ProductFormPage o-- "0..1" Product : edits
ProductFormPage *-- "_ProductFormPageState" : creates state
_ProductFormPageState --> ProductViewModel : via widget

' presentation.widgets
ProductCard --> Product : displays

' main
MyApp --> ProductViewModel : owns
MyApp ..> ProductListPage : root widget

@enduml
